# labs

./: .gitignore  README.md  app.py  implementation_plan.md  main.py  requirements.txt  todos.db  walkthrough.md
.agent/skills/license-header-adder/resources/: HEADER.txt
md/: scratchpad_2owi5iw1.md
projects/LTspice-labs/1_HalfRectifier/: HalfRectifier.asc  HalfRectifier.op.raw  HalfRectifier.plt  HalfRectifier.raw
projects/embedded-cpp-labs/: .gitignore  CMakeLists.txt  Log.md  README.md  build_and_test.bat  build_and_test.sh  vcpkg-configuration.json
projects/embedded-cpp-labs/.github/workflows/: cmake-gtest.yml  cmake-gtest2.yml
projects/embedded-cpp-labs/gtest_MinGW64_vscode_win_helloworld/: CMakeLists.txt  README.md  vcpkg.json
projects/embedded-cpp-labs/gtest_MinGW64_vscode_win_helloworld/tests/: test_helloworld.cpp
projects/embedded-cpp-labs/gtest_gcc_linux_helloworld/: CMakeLists.txt
projects/embedded-cpp-labs/src/: AccessLog.cpp  LRU.cpp  Merge_SLL.cpp  heap_stack.cpp
projects/embedded-cpp-labs/src/leetcode/: README.md
projects/embedded-cpp-labs/src/leetcode/src/: LC1.cpp  LC167.cpp  LC3.cpp  LC53.cpp  LC653.cpp  Solution.h
projects/embedded-cpp-labs/tests/: test_LC1.cpp  test_LC167.cpp  test_LC3.cpp  test_LC53.cpp  test_LC653.cpp
projects/embedded-cpp-labs/tests/gtest_helpers/: gtest_main.cpp
projects/my-agy-projects/: README.md  algorithms.py  data_processor.py  test_algorithms.py
projects/my-agy-projects/.agent/skills/license-header-adder/: SKILL.md
projects/my-agy-projects/agy-md/: task.md
projects/my-agy-projects/static/: style.css
projects/python-labs/: .gitignore  README.md  progress.md  track_progress.py
projects/python-labs/.github/workflows/: test-solution.yml
projects/python-labs/solutions/: helloword.py  helloworld.ipynb  problem_001_two_sum.py  template.py
projects/python-labs/tests/: test_solutions.py
templates/: index.html
